# xed-sessionsaver-plugin

./: .gitignore  .gitmodules  README.md  create-deb.sh  meson.build  run.sh  uninstall.sh
data/: com.github.tudo75.xed-sessionsaver-plugin.gresource.xml  com.github.tudo75.xed-sessionsaver-plugin.gschema.xml  meson.build  sessionsaver-plugin.desktop.in  sessionsaver.ui
debian/: changelog  control  copyright  rules
po/: POTFILES  en.po  it.po
src/: dialogs.vala  meson.build  session.vala  sessionsaver.vala
